--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hackathon - Reps'n'Sets</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"> -->
 </head>
 <body>
     <nav>
         <ul>
-          <li><a href="#">Reps'n'Sets.</a></li>
+          <li><a href="#" class="logo">Reps'n'Sets.</a></li>
           <li><a href="#">Home</a></li>
           <li><a href="#">Plans</a></li>
           <li><a href="#">Blogs</a></li>
@@ -23,12 +24,12 @@
     <hr>
     <div class="container">
         <div class="text-container">
-          <h1>Track Workouts</h1>
-          <h1>make progress</h1>
+          <div><p>Track Workouts<br>make progress</p></div>
+          
           <button class="button-2">Start now</button>
         </div>
         <div class="image-container">
-            <img src="98939735.jpg" alt="your-image-description">
+            <img src="lady.jpg" alt="your-image-description">
           </div>
       </div>
 </body>
